--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@turf/bbox": "^6.0.0",
     "axios": "^0.19.0",
     "classnames": "^2.2.5",
+    "dotenv-webpack": "^1.7.0",
     "history": "^4.7.2",
     "immutable": "^3.8.2",
     "jsrsasign": "^8.0.6",
